
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cruise-toolkit"
version = "0.1.0"
description = "Unified CLI wrapper for barcode/UMI & CR/UR tools"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Dawn"}]
license = {text = "MIT"}
keywords = ["single-cell", "UMI", "barcode", "cyclone", "RNA"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.scripts]
cruise-toolkit = "cruise_toolkit.cli:main"
[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["common_utils"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["cruise_toolkit*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"