[metadata]
name = cruise-toolkit
version = 0.1.0
description = Unified CLI wrapper for barcode/UMI & CR/UR tools
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Dawn
author_email = 605547565@qq.com
keywords = single-cell, UMI, barcode, cyclone, RNA
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Homepage = https://github.com/dawangran/cruise-toolkit

[options]
python_requires = >=3.8
package_dir =
    = src
packages = find:
py_modules =
    common_utils
include_package_data = True

[options.packages.find]
where = src
include =
    cruise_toolkit*

[options.entry_points]
console_scripts =
    cruise-toolkit = cruise_toolkit.cli:main
